Implement recursive search of labels, add comments to vague code and fix tests.