@@ -45,12 +45,13 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.groupingBy;
 
 /**
  * Models a Java class that can be referred to in a Frank configuration.
@@ -78,6 +79,8 @@ public class FrankElement implements Comparable<FrankElement> {
 
 	private static final Pattern DESCRIPTION_HEADER_SPLIT = Pattern.compile("(\\. )|(\\.\\n)|(\\.\\r\\n)");
 
+	// A list of methods on the class, which meet certain criteria. The method must be public and have 1 argument for example.
+	// FrankMethod: Index
 	private final @Getter LinkedHashMap<FrankMethod, Integer> unusedConfigChildSetterCandidates = new LinkedHashMap<>();
 	private final @Getter List<ConfigChild> configChildrenUnderConstruction = new ArrayList<>();
 
@@ -114,7 +117,6 @@ public class FrankElement implements Comparable<FrankElement> {
 	private @Getter List<ParsedJavaDocTag> specificParameters = new ArrayList<>();
 	private @Getter List<Forward> forwards = new ArrayList<>();
 	private @Getter List<QuickLink> quickLinks = new ArrayList<>();
-	private @Getter List<ParsedJavaDocTag> tags = new ArrayList<>();
 	private @Getter List<Note> notes = new ArrayList<>();
 
 	private @Getter Map<String, List<String>> labels = new HashMap<>();
@@ -307,10 +309,43 @@ public class FrankElement implements Comparable<FrankElement> {
 	}
 
 	private Map<String, List<String>> parseLabelAnnotations(FrankClass clazz, LabelValues labelValues) {
-		return Arrays.stream(clazz.getAnnotations())
+		if (clazz == null) {
+			return new HashMap<>();
+		}
+
+		// Search labels for this class.
+		Map<String, List<String>> labels = Arrays.stream(clazz.getAnnotations())
 			.filter(this::isLabelAnnotation)
 			.flatMap(annotation -> parseLabelAnnotation(annotation, labelValues))
-			.collect(Collectors.groupingBy(FrankLabel::getName, Collectors.mapping(FrankLabel::getValue, Collectors.toList())));
+			.collect(groupingBy(FrankLabel::getName, Collectors.mapping(FrankLabel::getValue, Collectors.toList())));
+
+		// Recursively search the superclass and interfaces for label annotations.
+		FrankClass superClass = clazz.getSuperclass();
+		if (superClass != null) {
+			labels = mergeLabels(labels, parseLabelAnnotations(superClass, labelValues));
+		}
+
+		var interfaceLabels = Arrays.stream(clazz.getInterfaces())
+			.map(i -> parseLabelAnnotations(i, labelValues))
+			.toList();
+
+		for (var map2 : interfaceLabels) {
+			labels = mergeLabels(labels, map2);
+		}
+
+		return labels;
+	}
+
+	private Map<String, List<String>> mergeLabels(Map<String, List<String>> map1, Map<String, List<String>> map2) {
+		HashMap<String, List<String>> result = new HashMap<>(map1);
+
+		for (String key : map2.keySet()) {
+			if (!result.containsKey(key)) {
+				result.put(key, map2.get(key));
+			}
+		}
+
+		return result;
 	}
 
 	private Stream<FrankLabel> parseLabelAnnotation(FrankAnnotation annotation, LabelValues labelValues) {
@@ -335,9 +370,10 @@ public class FrankElement implements Comparable<FrankElement> {
 		Object rawValue = labelAddingAnnotation.getValue();
 
 		if (rawValue instanceof FrankEnumConstant enumConstant) {
+			labelValues.setValues(label, enumConstant.getAllEnumValues());
+
 			// This considers annotation @EnumLabel
 			EnumValue value = new EnumValue(enumConstant);
-			labelValues.addValue(label, value.getLabel());
 			return new FrankLabel(label, value.getLabel());
 		}
 
